# baldosa

./: .gitignore  .gitleaksignore  404.html  CONTRIBUTION.md  Dockerfile  LICENSE  README.md  about.md  cli.sh  dev.sh  docker-compose.yaml  go.mod  go.sum  index.html  terms.md
bank/: .gitignore  .tug  Cargo.toml  config.toml  rustfmt.toml
bank/.sqlx/: query-079332766b130519613cd31c62703c8f202ecba41563ead6f6ed96653ae10ba1.json  query-10fd26fccb34b1137288e2f8bb5c151aff5d4e35208ca75ff67e7e90175361bf.json  query-28bddbb2189eff0e3318c9a2a097cbeefb4f8df04002119fc68c75511a19d077.json  query-2d40910548302734ee363bfb7e8a67c3c3c716ba41bbcc642f6d1f873bdd3999.json  query-38efc3df26290f5e4317e7517b200952bd1bb197a42441baa3dd6d1559b6434f.json  query-4770260e2eebb3cbb05822d47081abb010459186f229585e1425efe5bfa64950.json  query-519469becafa5730fab9086cdc0e6eb8ca7f86b539b23ba9347446c6cab21654.json  query-7609165d94c8f1bea9d535b9b7ad727fd06592973d7f83017292d41acb203be6.json  query-7c1cdcd2b64e08a198c5be8cee56321355082ee03cc6cbe13b826b87dbbc0f2f.json  query-8051603cd9c741d411945d12f5b56be9d035ddece2cea0b9c791ba3385a98013.json  query-86e455e8dd940a557eef0279af7d137538d0836ca102abcaca2dc39c8e76e1d1.json  query-883c2baa3e4d0f2150a5e48034cd3cbb0013ba71a2b6cae441f073b4a453938f.json  query-8c512bff3499e750a209ec5457c9bd750a0aa989e79c48c7fb9de13206b75f30.json  query-95fa791fdd6242ed1e68c21bb0fffe50a76ab3c11e4bb4609a91436efb24f9e1.json  query-9749a5f0024580c911a8bbb92fa06b7137a1289a520682dcbeff35d33dc6ae7a.json  query-cc96a5d5d2ea84bdfb6ca8b31c0da97ec99c02a4cb33df22f8e9d8f82486430f.json  query-d105823b96c5087e90bc3a5ef5207731e575f357fc10573147ac1029a29e2886.json  query-da41b4bb097700d71d64e4bcd0f36f78c7b2e2b5c62605f04b70f5638f32de75.json  query-f8bcc23226f2de89b049cc735ebd9e83115c768f9afe6403d749e581cafb124d.json
bank/migrations/: 20250322102351_users.sql  20250326134417_one_time_codes.sql  20250331173923_transactions.sql  20250415091425_bids.sql  20260126162942_reactions.sql
bank/src/: config.rs  db.rs  env.rs  health.rs  main.rs  router.rs  run_auctions.rs
bank/src/auth/: admin.rs  authenticate.rs  email.rs  error.rs  mod.rs  otc.rs  passkeys.rs  register.rs  storage.rs  user.rs  users.rs
bank/src/auth/email/: authenticate.rs  code.rs  mod.rs  register.rs  send.rs  verify.rs
bank/src/bidding/: auctions.rs  bid.rs  book.rs  config.rs  coords.rs  error.rs  mod.rs  tile.rs  tile_account.rs  upload.rs  util.rs
bank/src/bidding/api/: admin.rs  auth.rs  info.rs  mod.rs  post_bid.rs  publish.rs  suggest.rs  user_bids.rs  validate.rs
bank/src/bidding/book/: bid.rs  coords.rs  core.rs  info.rs  mod.rs  publish.rs  user.rs
bank/src/bidding/link_preview/: error.rs  mod.rs  sdk.rs
bank/src/bidding/publisher/: auth.rs  error.rs  mod.rs  publisher.rs  sdk.rs
bank/src/bidding/reactions/: api.rs  mod.rs  storage.rs
bank/src/wallet/: account.rs  api.rs  auth.rs  config.rs  error.rs  ledger.rs  macros.rs  mod.rs  ops.rs  transaction.rs
bank/src/wallet/operations/: accept.rs  balance.rs  inject.rs  mod.rs  offer.rs  partially_accept.rs  (+2 more)
publisher/: .gitignore  .tug  Cargo.toml  README.md  config.toml
publisher/.sqlx/: query-606de68d21f298b3f681b317c88095ab1c867981891c326778d4f8545ac186c2.json  query-7bf50e40e13f7d68f67e64170bce4f787afe391c1f6c2aabcb889e87a5a82cd1.json  query-c06e44703e53c090013e2518b9e67323fb842b33b953439ac6d3a9d3c442eab0.json
publisher/migrations/: 20250212115452_add-tiles-table.sql
publisher/src/: config.rs  db.rs  env.rs  main.rs  s3.rs
publisher/src/auth/: jwt.rs  mod.rs  simple_key.rs
publisher/src/cartography/: cartographer.rs  mod.rs  s3_target.rs  target.rs
publisher/src/image/: api.rs  error.rs  io.rs  mod.rs  process.rs  publish.rs  unpublish.rs  util.rs
(+399 files in other folders)
