[package]
name = "bank"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.88"
axum = { version = "0.8", features = ["macros"] }
dotenvy = "0.15.7"
env_logger = "0.11.7"
log = "0.4.27"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
thiserror = "2.0.12"
tokio = { "version" = "1.44", "features" = ["full"] }
tower-sessions = "0.14.0"
webauthn-rs = { version = "0.5.1", features = ["danger-allow-state-serialisation", "conditional-ui"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.2", "features" = ["cors"] }
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.40", features = ["serde"] }
rand = "0.9.0"
resend-rs = "0.12.1"
