[package]
name = "publisher"
version = "0.0.1"
edition = "2021"

[dependencies]
tower = "0.5.2"
axum = { version = "0.8", features = ["macros"] }
log = "0.4"
tokio = { version = "1.44", features = ["full"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
image = "0.25"
futures = "0.3"
aws-config = "1.6"
aws-sdk-s3 = "1.79"
env_logger = "0.11.7"
async-trait = "0.1.88"
url = "2.5.4"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
hex = "0.4.3"
dotenvy = "0.15.7"
base64 = "0.22.1"
serde_json = "1.0.140"
thiserror = "2.0.17"
tower-http = { version = "0.6.8", "features" = ["cors"] }
